# mdpat

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  premake5.lua
cmake/: CMakeLists.txt
src/: CMakeLists.txt  bcastContainers.cpp  bcastContainers.hpp  error.hpp  initNode.cpp  initNode.hpp  main.cpp  mpiType.hpp  mpi_stub.h  msd.cpp  msd.hpp  output.cpp  output.hpp  permuteDims.cpp  permuteDims.hpp  readInput.cpp  readInput.hpp  readTrajectories.cpp  readTrajectories.hpp  selectFromArray.cpp  selectFromArray.hpp  splitValues.cpp  splitValues.hpp  stepRange.cpp  stepRange.hpp  trajectory.cpp  trajectory.hpp
src/trash/: permuteDims.cpp  readTrajectories.cpp  readTrajectories.hpp  selectFromArray.cpp  selectFromArray.hpp
test/: CMakeLists.txt  testMSDSerial.cpp  testPermuteDims.cpp  testReadInput.cpp  testReadTrajectories.cpp
test/testFiles/: dump.0  dump.0.lammpsbin  dump.000000000.txt  dump.000000050.txt  dump.000000100.txt  dump.000000150.txt  dump.000000200.txt  dump.000000250.txt  dump.100.lammpsbin  dump.150.lammpsbin  dump.200.lammpsbin  dump.250  dump.250.lammpsbin  dump.50  dump.50.lammpsbin  in.melt  log.lammps  testInput.txt
tools/: generateWaveVectors.cpp  generateWaveVevtors.hpp  scatteringVectors.cpp  scatteringVectors.hpp
